bin_PROGRAMS = xzibit-jupiter
xzibit_jupiter_SOURCES = jupiter.c jupiter.h xzibit-client.c xzibit-client.h client.c client-helpers.c client-helpers.h common.h common.c
xzibit_jupiter_CPPFLAGS = -g @GDK_CFLAGS@ @GTK_CFLAGS@ @TELEPATHY_GLIB_CFLAGS@
xzibit_jupiter_LDADD = @GDK_LIBS@ @GTK_LIBS@ @TELEPATHY_GLIB_LIBS@ -lXi -lXtst -lXext -lvncserver
